--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -110,6 +110,8 @@ buildtest:intTestA:
     - sbt -DelasticSearch.serverUrl=elasticsearch://docker:9200 "intTest/testOnly au.csiro.data61.magda.api.DataSet*Spec"
     - cd magda-elastic-search
     - docker-compose down
+    - "ls $CI_PROJECT_DIR/sbt-cache/ || :"
+    - "find ~/ -type d -name "ivy"
   artifacts:
     paths:
       - "target"
@@ -169,6 +171,8 @@ buildtest:intTestB:
         - sbt -DelasticSearch.serverUrl=elasticsearch://docker:9200 "intTest/testOnly au.csiro.data61.magda.api.Facet*Spec"
         - cd magda-elastic-search
         - docker-compose down
+        - "ls $CI_PROJECT_DIR/sbt-cache/ || :"
+        - "find ~/ -type d -name "ivy"
     artifacts:
         paths:
             - "target"
@@ -228,6 +232,8 @@ buildtest:intTestC:
         - sbt -DelasticSearch.serverUrl=elasticsearch://docker:9200 "intTest/testOnly au.csiro.data61.magda.api.Language*Spec au.csiro.data61.magda.api.Tenant*Spec"
         - cd magda-elastic-search
         - docker-compose down
+        - "ls $CI_PROJECT_DIR/sbt-cache/ || :"
+        - "find ~/ -type d -name "ivy"
     artifacts:
         paths:
             - "target"
@@ -292,6 +298,8 @@ buildtest:intTestD:
     - sbt -DelasticSearch.serverUrl=elasticsearch://docker:9200 "intTest/testOnly au.csiro.data61.magda.crawler.*Spec au.csiro.data61.magda.indexer.*Spec au.csiro.data61.magda.opa.*Spec au.csiro.data61.magda.spatial.*Spec"
     - cd magda-elastic-search
     - docker-compose down
+    - "ls $CI_PROJECT_DIR/sbt-cache/ || :"
+    - "find ~/ -type d -name "ivy"
   artifacts:
     paths:
       - "target"
