--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,7 +57,7 @@ registry-typescript-api:
       - "magda-typescript-common/src/generated"
     expire_in: 30 days
 
-buildtest:search-group-1:
+buildtest:search-with-index-cache:
   stage: buildtest
   image: registry.gitlab.com/magda-data/magda/data61/magda-builder-scala:$CI_COMMIT_REF_SLUG
   retry: 2
@@ -107,7 +107,7 @@ buildtest:search-group-1:
     - docker-compose up -d
     - cd ..
     - "ls $CI_PROJECT_DIR/sbt-cache/ || cp -R /sbt-cache/* $CI_PROJECT_DIR/sbt-cache/"
-    - sbt -DelasticSearch.serverUrl=elasticsearch://docker:9200 "intTest/testOnly au.csiro.data61.magda.api.DataSet*Spec"
+    - sbt -DelasticSearch.serverUrl=elasticsearch://docker:9200 "intTest/testOnly au.csiro.data61.magda.api.*Spec"
     - cd magda-elastic-search
     - docker-compose down
   artifacts:
@@ -116,125 +116,7 @@ buildtest:search-group-1:
       - "*/target"
     expire_in: 30 days
 
-buildtest:search-group-2:
-    stage: buildtest
-    image: registry.gitlab.com/magda-data/magda/data61/magda-builder-scala:$CI_COMMIT_REF_SLUG
-    retry: 2
-    dependencies: []
-    before_script:
-        - |
-            if [ -z "$DOCKER_HOST" -a "$KUBERNETES_PORT" ]; then
-              export DOCKER_HOST='tcp://localhost:2375'
-            fi
-        - "cp -R /sbt-cache/* $CI_PROJECT_DIR/sbt-cache/ || :"
-        - docker info
-        - apk update
-        - apk upgrade
-        - apk add python3 python3-dev py3-pip build-base openssl-dev libffi-dev
-        - pip3 install --upgrade pip
-        - pip3 install docker-compose
-        - docker-compose --version
-    cache:
-        key: $CI_JOB_NAME
-        paths:
-            - "$CI_PROJECT_DIR/sbt-cache"
-            - "target"
-            - "*/target"
-            - "*/project/target"
-            - "$CI_PROJECT_DIR/pip-cache"
-    services:
-        - docker:dind
-    variables:
-        PIP_CACHE_DIR: "$CI_PROJECT_DIR/pip-cache"
-        # 2.5gb heap
-        # unload classes we don't need
-        # aim for < 1000ms gc pauses (largely ignored)
-        # use the next-gen collector that every blog on the internet says not to use because we know better than them
-        # use < 25% of time for GC
-        # put the ivy cache in the workspace where gitlab can cache it
-        SBT_OPTS: >
-            -Xms2500M -Xmx2500M
-            -XX:+CMSClassUnloadingEnabled
-            -XX:MaxGCPauseMillis=1000
-            -XX:+UseG1GC
-            -XX:GCTimeRatio=3
-            -Dsbt.ivy.home=$CI_PROJECT_DIR/sbt-cache/ivy
-    tags:
-        - heavy
-    script:
-        - cd magda-elastic-search
-        - docker-compose up -d
-        - cd ..
-        - "ls $CI_PROJECT_DIR/sbt-cache/ || cp -R /sbt-cache/* $CI_PROJECT_DIR/sbt-cache/"
-        - sbt -DelasticSearch.serverUrl=elasticsearch://docker:9200 "intTest/testOnly au.csiro.data61.magda.api.Facet*Spec"
-        - cd magda-elastic-search
-        - docker-compose down
-    artifacts:
-        paths:
-            - "target"
-            - "*/target"
-        expire_in: 30 days
-
-buildtest:search-group-3:
-    stage: buildtest
-    image: registry.gitlab.com/magda-data/magda/data61/magda-builder-scala:$CI_COMMIT_REF_SLUG
-    retry: 2
-    dependencies: []
-    before_script:
-        - |
-            if [ -z "$DOCKER_HOST" -a "$KUBERNETES_PORT" ]; then
-              export DOCKER_HOST='tcp://localhost:2375'
-            fi
-        - "cp -R /sbt-cache/* $CI_PROJECT_DIR/sbt-cache/ || :"
-        - docker info
-        - apk update
-        - apk upgrade
-        - apk add python3 python3-dev py3-pip build-base openssl-dev libffi-dev
-        - pip3 install --upgrade pip
-        - pip3 install docker-compose
-        - docker-compose --version
-    cache:
-        key: $CI_JOB_NAME
-        paths:
-            - "$CI_PROJECT_DIR/sbt-cache"
-            - "target"
-            - "*/target"
-            - "*/project/target"
-            - "$CI_PROJECT_DIR/pip-cache"
-    services:
-        - docker:dind
-    variables:
-        PIP_CACHE_DIR: "$CI_PROJECT_DIR/pip-cache"
-        # 2.5gb heap
-        # unload classes we don't need
-        # aim for < 1000ms gc pauses (largely ignored)
-        # use the next-gen collector that every blog on the internet says not to use because we know better than them
-        # use < 25% of time for GC
-        # put the ivy cache in the workspace where gitlab can cache it
-        SBT_OPTS: >
-            -Xms2500M -Xmx2500M
-            -XX:+CMSClassUnloadingEnabled
-            -XX:MaxGCPauseMillis=1000
-            -XX:+UseG1GC
-            -XX:GCTimeRatio=3
-            -Dsbt.ivy.home=$CI_PROJECT_DIR/sbt-cache/ivy
-    tags:
-        - heavy
-    script:
-        - cd magda-elastic-search
-        - docker-compose up -d
-        - cd ..
-        - "ls $CI_PROJECT_DIR/sbt-cache/ || cp -R /sbt-cache/* $CI_PROJECT_DIR/sbt-cache/"
-        - sbt -DelasticSearch.serverUrl=elasticsearch://docker:9200 "intTest/testOnly au.csiro.data61.magda.api.Language*Spec au.csiro.data61.magda.api.Tenant*Spec"
-        - cd magda-elastic-search
-        - docker-compose down
-    artifacts:
-        paths:
-            - "target"
-            - "*/target"
-        expire_in: 30 days
-
-buildtest:other-int-tests:
+buildtest:search-no-index-cache:
   stage: buildtest
   image: registry.gitlab.com/magda-data/magda/data61/magda-builder-scala:$CI_COMMIT_REF_SLUG
   retry: 2
@@ -289,7 +171,7 @@ buildtest:other-int-tests:
     - docker-compose up -d
     - cd ..
     - "ls $CI_PROJECT_DIR/sbt-cache/ || cp -R /sbt-cache/* $CI_PROJECT_DIR/sbt-cache/"
-    - sbt -DelasticSearch.serverUrl=elasticsearch://docker:9200 "intTest/testOnly au.csiro.data61.magda.crawler.*Spec au.csiro.data61.magda.indexer.*Spec au.csiro.data61.magda.opa.*Spec au.csiro.data61.magda.spatial.*Spec"
+    - sbt -DelasticSearch.serverUrl=elasticsearch://docker:9200 "intTest/testOnly au.csiro.data61.magda.crawler.*Spec au.csiro.data61.magda.indexer.*Spec au.csiro.data61.magda.spatial.*Spec"
     - cd magda-elastic-search
     - docker-compose down
   artifacts:
@@ -367,23 +249,45 @@ buildtest:map:
 
 buildtest:typescript-apis:
   stage: buildtest
-  image: registry.gitlab.com/magda-data/magda/data61/magda-builder-nodejs:$CI_COMMIT_REF_SLUG
+  image: registry.gitlab.com/magda-data/magda/data61/magda-builder-docker:$CI_COMMIT_REF_SLUG
   retry: 1
   dependencies:
     - builders-and-yarn
     - registry-typescript-api
+  before_script:
+    - |
+      if [ -z "$DOCKER_HOST" -a "$KUBERNETES_PORT" ]; then
+        export DOCKER_HOST='tcp://localhost:2375'
+      fi
+    - docker info
+    - apk update
+    - apk upgrade
+    - apk add python3 python3-dev py3-pip build-base openssl-dev libffi-dev
+    - pip3 install --upgrade pip
+    - pip3 install docker-compose
+    - docker-compose --version
   cache:
-    paths: []
+    key: $CI_JOB_NAME
+    paths:
+      - "$CI_PROJECT_DIR/pip-cache"
   services:
     - postgres:9.6
+    - docker:dind
   variables:
+    PIP_CACHE_DIR: "$CI_PROJECT_DIR/pip-cache"
     POSTGRES_HOST: postgres
     POSTGRES_DB: postgres
     POSTGRES_USER: postgres
     POSTGRES_PASSWORD: ""
+    OPA_URL: "http://docker:8181/"
   script:
+    - cd deploy/helm/magda/charts/opa
+    - docker-compose up -d
+    - cd ../../../../..
     - yarn run in-submodules -- -f categories.api=true -f language=typescript -- run build --include-filtered-dependencies
     - yarn run in-submodules -- -f categories.api=true -f language=typescript -- run test --include-filtered-dependencies
+    - cd deploy/helm/magda/charts/opa
+    - docker-compose down
   artifacts:
     paths:
       - "*/dist"
@@ -444,10 +348,8 @@ dockerize:scala:
     - registry-typescript-api
     - builders-and-yarn
     - buildtest:registry
-    - buildtest:other-int-tests
-    - buildtest:search-group-1
-    - buildtest:search-group-2
-    - buildtest:search-group-3
+    - buildtest:search-no-index-cache
+    - buildtest:search-with-index-cache
   cache:
     policy: pull-push
     key: $CI_JOB_NAME
@@ -605,7 +507,7 @@ dockerize:dockerExtensions:
     # Create kube secrets
     - 'echo {\"apiVersion\": \"v1\", \"kind\": \"Secret\", \"metadata\": {\"name\": \"auth-secrets\"}, \"type\": \"Opaque\", \"data\": {\"jwt-secret\": \"${JWT_SECRET}\", \"session-secret\":\"${SESSION_SECRET}\"}} | kubectl apply --namespace $CI_COMMIT_REF_SLUG -f -'
     - kubectl create secret docker-registry regcred --namespace $CI_COMMIT_REF_SLUG --docker-server=registry.gitlab.com --docker-username=gitlab-ci-token --docker-password=$CI_JOB_TOKEN --docker-email=alex.gilleran@data61.csiro.au --dry-run -o json | kubectl apply --namespace $CI_COMMIT_REF_SLUG -f -
-    - kubectl create secret generic db-passwords --from-literal=combined-db=$DB_PASSWORD --from-literal=authorization-db=$DB_PASSWORD --from-literal=content-db=$DB_PASSWORD --from-literal=session-db=$DB_PASSWORD  --from-literal=registry-db=$DB_PASSWORD --from-literal=combined-db-client=$DB_PASSWORD --from-literal=authorization-db-client=$DB_PASSWORD --from-literal=content-db-client=$DB_PASSWORD --from-literal=session-db-client=$DB_PASSWORD --from-literal=registry-db-client=$DB_PASSWORD --from-literal=tenant-db=$DB_PASSWORD --from-literal=tenant-db-client=$DB_PASSWORD --dry-run -o json | kubectl apply --namespace $CI_COMMIT_REF_SLUG -f -
+    - kubectl create secret generic db-passwords --from-literal=combined-db=$DB_PASSWORD --from-literal=authorization-db=$DB_PASSWORD --from-literal=content-db=$DB_PASSWORD --from-literal=session-db=$DB_PASSWORD --from-literal=registry-db=$DB_PASSWORD --from-literal=combined-db-client=$DB_PASSWORD --from-literal=authorization-db-client=$DB_PASSWORD --from-literal=content-db-client=$DB_PASSWORD --from-literal=session-db-client=$DB_PASSWORD --from-literal=registry-db-client=$DB_PASSWORD --dry-run -o json | kubectl apply --namespace $CI_COMMIT_REF_SLUG -f -
     - kubectl create secret generic oauth-secrets --from-literal=facebook-client-secret=$FACEBOOK_CLIENT_SECRET --from-literal=google-client-secret=$GOOGLE_CLIENT_SECRET --from-literal arcgis-client-secret=$ARCGIS_CLIENT_SECRET --namespace $CI_COMMIT_REF_SLUG --dry-run -o json | kubectl apply --namespace $CI_COMMIT_REF_SLUG -f -
     - kubectl create secret generic smtp-secret --from-literal=username=$SMTP_USERNAME --from-literal=password=$SMTP_PASSWORD --namespace $CI_COMMIT_REF_SLUG --dry-run -o json | kubectl apply --namespace $CI_COMMIT_REF_SLUG -f -
     - echo "$DB_SERVICE_ACCOUNT_PRIVATE_KEY" > db-service-account-private-key.json
@@ -628,11 +530,7 @@ dockerize:dockerExtensions:
   script:
     - helm upgrade $CI_COMMIT_REF_SLUG deploy/helm/magda --install --recreate-pods --namespace $CI_COMMIT_REF_SLUG -f deploy/helm/preview.yml --set global.image.repository=registry.gitlab.com/magda-data/magda/data61,global.image.tag=$CI_COMMIT_REF_SLUG,ingress.hostname=$CI_COMMIT_REF_SLUG.dev.magda.io,combined-db.waleBackup.method=NONE,elasticsearch.useGcsSnapshots=false,global.externalUrl=https://$CI_COMMIT_REF_SLUG.dev.magda.io,global.namespace=$CI_COMMIT_REF_SLUG --timeout 3600 --wait
     - echo "Successfully deployed to https://${CI_COMMIT_REF_SLUG}.dev.magda.io"
-(No Data) Run As Multi-tenant Preview:
-  <<: *runAsPreview
-  script:
-    - helm upgrade $CI_COMMIT_REF_SLUG deploy/helm/magda --install --recreate-pods --namespace $CI_COMMIT_REF_SLUG -f deploy/helm/preview-multi-tenant.yml --set global.image.repository=registry.gitlab.com/magda-data/magda/data61,global.image.tag=$CI_COMMIT_REF_SLUG,ingress.hostname=$CI_COMMIT_REF_SLUG.dev.magda.io,combined-db.waleBackup.method=NONE,elasticsearch.useGcsSnapshots=false,global.externalUrl=https://$CI_COMMIT_REF_SLUG.dev.magda.io,global.magdaAdminPortalName=admin-$CI_COMMIT_REF_SLUG.dev.magda.io,global.namespace=$CI_COMMIT_REF_SLUG --timeout 3600 --wait
-    - echo "Successfully deployed to https://${CI_COMMIT_REF_SLUG}.dev.magda.io"
+
 Stop Preview: &stopPreview
   stage: preview
   when: manual
