--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,6 +86,7 @@ buildtest:intTestA:
       - "*/target"
       - "*/project/target"
       - "$CI_PROJECT_DIR/pip-cache"
+    policy: pull-push
   services:
     - docker:dind
   variables:
@@ -148,6 +149,7 @@ buildtest:intTestB:
       - "*/target"
       - "*/project/target"
       - "$CI_PROJECT_DIR/pip-cache"
+    policy: pull
   services:
     - docker:dind
   variables:
@@ -209,6 +211,7 @@ buildtest:intTestC:
       - "*/target"
       - "*/project/target"
       - "$CI_PROJECT_DIR/pip-cache"
+    policy: pull
   services:
     - docker:dind
   variables:
@@ -270,6 +273,7 @@ buildtest:intTestD:
       - "*/target"
       - "*/project/target"
       - "$CI_PROJECT_DIR/pip-cache"
+    policy: pull
   services:
     - postgres:9.6
     - docker:dind
