Use tenant id in  authorization api.

--- a/deploy/helm/magda/charts/authorization-api/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/authorization-api/templates/deployment.yaml
@@ -26,7 +26,8 @@ spec:
             "--dbHost", "authorization-db",
             "--dbPort", "5432",
             "--opaUrl", "http://opa/",
-            "--registryApiUrl", "http://registry-api/v0"
+            "--registryApiUrl", "http://registry-api/v0",
+            "--tenantId", "0"
         ]
 {{- if .Values.global.enableLivenessProbes }}
         livenessProbe:
