--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -54,6 +54,7 @@
     "react-i18next": "^8.1.0",
     "react-leaflet": "^2.2.1",
     "react-list-drag-and-drop": "^0.9.0",
+    "react-select": "^3.0.4",
     "react-simplemde-editor": "^4.0.0",
     "retext": "^6.0.1",
     "retext-keywords": "^4.0.2",
@@ -72,6 +73,7 @@
     "@types/papaparse": "^4.5.7",
     "@types/react": "^16.8.17",
     "@types/react-dates": "^17.1.5",
+    "@types/react-select": "^3.0.0",
     "babel-core": "^6.26.0",
     "browser-detect": "^0.2.22",
     "d3-collection": "^1.0.4",
