First reasonably working implementation of policy-based control for the registry.

--- a/magda-registry-api/src/main/resources/application.conf
+++ b/magda-registry-api/src/main/resources/application.conf
@@ -67,3 +67,7 @@ webhooks {
 
 # How long to wait for a DELETE /records/?sourceTagToPreserve=x&sourceId=y call before returning a processing status code in ms
 trimBySourceTagTimeoutThreshold = 10000
+
+auth {
+    userId = "00000000-0000-4000-8000-000000000000"
+}
