--- a/magda-scala-common/src/main/resources/common.conf
+++ b/magda-scala-common/src/main/resources/common.conf
@@ -10,7 +10,7 @@ elasticSearch {
 
   indices {
     regions {
-      version = 23
+      version = 24
     }
 
     datasets {
@@ -41,24 +41,34 @@ regionSources = {
 		url = "https://s3-ap-southeast-2.amazonaws.com/magda-files/SA4.geojson"
 		idField = "SA4_CODE11"
 		nameField = "SA4_NAME11"
+        STEIdField = "STE_CODE11"
 		order = 30
 	}
 	SA3 {
 		url = "https://s3-ap-southeast-2.amazonaws.com/magda-files/SA3.geojson"
 		idField = "SA3_CODE11"
 		nameField = "SA3_NAME11"
+        STEIdField = "STE_CODE11"
+        SA4IdField = "SA4_CODE11"
 		order = 40
 	}
 	SA2 {
 		url = "https://s3-ap-southeast-2.amazonaws.com/magda-files/SA2.geojson"
 		idField = "SA2_MAIN11"
 		nameField = "SA2_NAME11"
+        STEIdField = "STE_CODE11"
+        SA4IdField = "SA4_CODE11"
+        SA3IdField = "SA3_CODE11"
 		order = 50
 	}
 	SA1 {
 		url = "https://s3-ap-southeast-2.amazonaws.com/magda-files/SA1.geojson"
 		idField = "SA1_MAIN11"
 		nameField = "SA1_MAIN11",
+        STEIdField = "STE_CODE11"
+        SA4IdField = "SA4_CODE11"
+        SA3IdField = "SA3_CODE11"
+        SA2IdField = "SA2_MAIN11"
 		includeIdInName = false,
 		order = 60
 	}
@@ -66,6 +76,7 @@ regionSources = {
 		url = "https://s3-ap-southeast-2.amazonaws.com/magda-files/LGA.geojson"
 		idField = "LGA_CODE15"
 		nameField = "LGA_NAME15"
+        STEIdField = "STE_CODE11"
 		order = 20
 	}
 	POA {
@@ -78,6 +89,7 @@ regionSources = {
 		url = "https://s3-ap-southeast-2.amazonaws.com/magda-files/COM_ELB_ID_2016.geojson"
 		idField = "DIV_ID"
 		nameField = "SORTNAME"
+        STEAbbrevField = "STATE"
 		order = 80
 	}
 	STE {
