update region ID case

--- a/magda-scala-common/src/main/resources/common.conf
+++ b/magda-scala-common/src/main/resources/common.conf
@@ -41,34 +41,34 @@ regionSources = {
 		url = "https://s3-ap-southeast-2.amazonaws.com/magda-files/SA4.geojson"
 		idField = "SA4_CODE11"
 		nameField = "SA4_NAME11"
-        STEIdField = "STE_CODE11"
+        steIdField = "STE_CODE11"
 		order = 30
 	}
 	SA3 {
 		url = "https://s3-ap-southeast-2.amazonaws.com/magda-files/SA3.geojson"
 		idField = "SA3_CODE11"
 		nameField = "SA3_NAME11"
-        STEIdField = "STE_CODE11"
-        SA4IdField = "SA4_CODE11"
+        steIdField = "STE_CODE11"
+        sa4IdField = "SA4_CODE11"
 		order = 40
 	}
 	SA2 {
 		url = "https://s3-ap-southeast-2.amazonaws.com/magda-files/SA2.geojson"
 		idField = "SA2_MAIN11"
 		nameField = "SA2_NAME11"
-        STEIdField = "STE_CODE11"
-        SA4IdField = "SA4_CODE11"
-        SA3IdField = "SA3_CODE11"
+        steIdField = "STE_CODE11"
+        sa4IdField = "SA4_CODE11"
+        sa3IdField = "SA3_CODE11"
 		order = 50
 	}
 	SA1 {
 		url = "https://s3-ap-southeast-2.amazonaws.com/magda-files/SA1.geojson"
 		idField = "SA1_MAIN11"
 		nameField = "SA1_MAIN11",
-        STEIdField = "STE_CODE11"
-        SA4IdField = "SA4_CODE11"
-        SA3IdField = "SA3_CODE11"
-        SA2IdField = "SA2_MAIN11"
+        steIdField = "STE_CODE11"
+        sa4IdField = "SA4_CODE11"
+        sa3IdField = "SA3_CODE11"
+        sa2IdField = "SA2_MAIN11"
 		includeIdInName = false,
 		order = 60
 	}
@@ -76,7 +76,7 @@ regionSources = {
 		url = "https://s3-ap-southeast-2.amazonaws.com/magda-files/LGA.geojson"
 		idField = "LGA_CODE15"
 		nameField = "LGA_NAME15"
-        STEIdField = "STE_CODE11"
+        steIdField = "STE_CODE11"
 		order = 20
 	}
 	POA {
