Loading the initial add dataset state works!

--- a/deploy/helm/magda/charts/web-server/templates/configmap.yaml
+++ b/deploy/helm/magda/charts/web-server/templates/configmap.yaml
@@ -10,5 +10,6 @@ data:
     "disableAuthenticationFeatures": {{ .Values.disableAuthenticationFeatures }},
     "baseUrl": {{ .Values.baseUrl | default "/" | quote }},
     "featureFlags": {{ toJson .Values.featureFlags | quote }},
-    "vocabularyApiEndpoints": {{ toJson .Values.vocabularyApiEndpoints | quote }}
+    "vocabularyApiEndpoints": {{ toJson .Values.vocabularyApiEndpoints | quote }},
+    "defaultOrganizationId": {{ toJson .Values.defaultOrganizationId | quote }}
   }'
