Fixed default org id in configmap

--- a/deploy/helm/magda/charts/web-server/templates/configmap.yaml
+++ b/deploy/helm/magda/charts/web-server/templates/configmap.yaml
@@ -11,5 +11,5 @@ data:
     "baseUrl": {{ .Values.baseUrl | default "/" | quote }},
     "featureFlags": {{ toJson .Values.featureFlags | quote }},
     "vocabularyApiEndpoints": {{ toJson .Values.vocabularyApiEndpoints | quote }},
-    "defaultOrganizationId": {{ toJson .Values.defaultOrganizationId | quote }}
+    "defaultOrganizationId": {{ .Values.defaultOrganizationId | quote }}
   }'
