--- a/magda-scala-common/src/main/resources/common.conf
+++ b/magda-scala-common/src/main/resources/common.conf
@@ -37,38 +37,55 @@ time {
 }
 
 regionSources = {
+    COUNTRY {
+		url = "https://s3-ap-southeast-2.amazonaws.com/magda-files/custom/country.geojson"
+		idField = "id"
+		nameField = "name"
+		order = 30
+	}
+    OFFSHORE_TERRITORIES {
+		url = "https://s3-ap-southeast-2.amazonaws.com/magda-files/custom/off-shore-territories.geojson"
+		idField = "id"
+		nameField = "name"
+        lv1Id = "2"
+		order = 30
+	}
 	SA4 {
 		url = "https://s3-ap-southeast-2.amazonaws.com/magda-files/SA4.geojson"
 		idField = "SA4_CODE11"
 		nameField = "SA4_NAME11"
-        steIdField = "STE_CODE11"
+        lv1Id = "1"
+        lv2IdField = "STE_CODE11"
 		order = 30
 	}
 	SA3 {
 		url = "https://s3-ap-southeast-2.amazonaws.com/magda-files/SA3.geojson"
 		idField = "SA3_CODE11"
 		nameField = "SA3_NAME11"
-        steIdField = "STE_CODE11"
-        sa4IdField = "SA4_CODE11"
+        lv1Id = "1"
+        lv2IdField = "STE_CODE11"
+        lv3IdField = "SA4_CODE11"
 		order = 40
 	}
 	SA2 {
 		url = "https://s3-ap-southeast-2.amazonaws.com/magda-files/SA2.geojson"
 		idField = "SA2_MAIN11"
 		nameField = "SA2_NAME11"
-        steIdField = "STE_CODE11"
-        sa4IdField = "SA4_CODE11"
-        sa3IdField = "SA3_CODE11"
+        lv1Id = "1"
+        lv2IdField = "STE_CODE11"
+        lv3IdField = "SA4_CODE11"
+        lv4IdField = "SA3_CODE11"
 		order = 50
 	}
 	SA1 {
 		url = "https://s3-ap-southeast-2.amazonaws.com/magda-files/SA1.geojson"
 		idField = "SA1_MAIN11"
 		nameField = "SA1_MAIN11",
-        steIdField = "STE_CODE11"
-        sa4IdField = "SA4_CODE11"
-        sa3IdField = "SA3_CODE11"
-        sa2IdField = "SA2_MAIN11"
+        lv1Id = "1"
+        lv2IdField = "STE_CODE11"
+        lv3IdField = "SA4_CODE11"
+        lv4IdField = "SA3_CODE11"
+        lv5IdField = "SA2_MAIN11"
 		includeIdInName = false,
 		order = 60
 	}
@@ -76,6 +93,7 @@ regionSources = {
 		url = "https://s3-ap-southeast-2.amazonaws.com/magda-files/LGA.geojson"
 		idField = "LGA_CODE15"
 		nameField = "LGA_NAME15"
+        lv1Id = "1"
         steIdField = "STE_CODE11"
 		order = 20
 	}
@@ -83,13 +101,14 @@ regionSources = {
 		url = "https://s3-ap-southeast-2.amazonaws.com/magda-files/POA.geojson"
 		idField = "POA_CODE"
 		nameField = "POA_NAME"
+        lv1Id = "1"
 		order = 70
 	}
 	COM_ELB_ID_2016 {
 		url = "https://s3-ap-southeast-2.amazonaws.com/magda-files/COM_ELB_ID_2016.geojson"
 		idField = "DIV_ID"
 		nameField = "SORTNAME"
-        STEAbbrevField = "STATE"
+        lv1Id = "1"
 		order = 80
 	}
 	STE {
@@ -97,6 +116,7 @@ regionSources = {
 		idField = "STE_CODE11"
 		nameField = "STE_NAME11"
         shortNameField = "STE_ABBREV"
+        lv1Id = "1"
 		order = 10
 	}
 }
