--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -48,6 +48,7 @@
     "pdfjs-dist": "2.0.550",
     "react": "^16.8.6",
     "react-app-polyfill": "^0.2.1",
+    "react-async-hook": "^3.4.0",
     "react-dates": "^20.1.0",
     "react-file-drop": "^0.2.7",
     "react-i18next": "^8.1.0",
