First working (sort of) version with access control. May not pass tests.

--- a/magda-registry-api/src/main/resources/application.conf
+++ b/magda-registry-api/src/main/resources/application.conf
@@ -71,3 +71,7 @@ trimBySourceTagTimeoutThreshold = 10000
 auth {
     userId = "00000000-0000-4000-8000-000000000000"
 }
+
+opa {
+    baseUrl = "http://localhost:6104/v0/opa"
+}
