--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -309,7 +309,8 @@
                 "FACEBOOK_CLIENT_ID": "173073926555600",
                 "FACEBOOK_CLIENT_SECRET": "none",
                 "GOOGLE_CLIENT_ID": "275237095477-f7ej2gsvbl2alb8bcqcn7r5jk0ur719p.apps.googleusercontent.com",
-                "GOOGLE_CLIENT_SECRET": "none"
+                "GOOGLE_CLIENT_SECRET": "none",
+                "PGUSER": "client"
             }
         },
         {
