WIP: Added integration test for registry access control.

--- a/magda-registry-api/src/main/resources/application.conf
+++ b/magda-registry-api/src/main/resources/application.conf
@@ -21,7 +21,7 @@ akka {
 
 http {
   interface = "0.0.0.0"
-  port = 6101
+  port = 6102
   externalUrl.v0 = "http://localhost:6101/v0/"
 }
 
@@ -38,7 +38,7 @@ db {
 }
 
 authorization {
-  skip = true
+  skip = false
 }
 
 webhooks {
@@ -71,6 +71,10 @@ trimBySourceTagTimeoutThreshold = 10000
 auth {
     userId = "00000000-0000-4000-8000-000000000000"
     skipOpaQuery = false
+}
+
+authApi {
+    baseUrl = "http://localhost:6104"
 }
 
 opa {
