--- a/magda-authorization-api/package.json
+++ b/magda-authorization-api/package.json
@@ -6,7 +6,7 @@
     "compile": "tsc -p tsconfig-build.json",
     "watch": "tsc -p tsconfig-build.json --watch",
     "start": "node dist/index.js",
-    "dev": "export PGUSER=client && run-typescript-in-nodemon src/index.ts",
+    "dev": "export PGUSER=client && export JWT_SECRET=squirrel && run-typescript-in-nodemon src/index.ts",
     "test": "nyc mocha --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/*.spec.ts\"",
     "docker-build-local": "create-docker-context-for-node-component --build --push --tag auto --local",
     "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto",
