Bug fixes in access control tests: Must assign roles to testing users.

--- a/deploy/helm/minikube-dev.yml
+++ b/deploy/helm/minikube-dev.yml
@@ -27,7 +27,7 @@ gateway:
     ckanAuthenticationUrl: https://data.gov.au/data
 
 registry-api:
-  skipAuthorization: true
+  skipAuthorization: false
   
 correspondence-api:
   smtpPort: 2525
