--- a/deploy/helm/magda/charts/web-server/values.yaml
+++ b/deploy/helm/magda/charts/web-server/values.yaml
@@ -19,3 +19,4 @@ useLocalStyleSheet: false
 contentApiBaseUrlInternal: "http://content-api/v0/"
 featureFlags: {}
 vocabularyApiEndpoints: []
+defaultContactEmail: "mail@example.com"
