--- a/deploy/helm/magda-dev.yml
+++ b/deploy/helm/magda-dev.yml
@@ -7,6 +7,7 @@ global:
   rollingUpdate:
     maxUnavailable: 1
   enablePriorityClass: true
+  defaultContactEmail: "magda-test@googlegroups.com"
 
 tags:
   all: true
@@ -101,7 +102,6 @@ web-server:
     - "https://vocabs.ands.org.au/repository/api/lda/ands-nc/controlled-vocabulary-for-resource-type-genres/version-1-1/concept.json"
 
 correspondence-api:
-  defaultRecipient: "magda-test@googlegroups.com"
   alwaysSendToDefaultRecipient: true
   smtpHostname: "smtp.mailgun.org"
   smtpPort: 2525
