--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -40,6 +40,7 @@
     "chrono-node": "^1.3.11",
     "core-js": "^2.5.7",
     "crc-32": "^1.2.0",
+    "debounce-promise": "^3.1.2",
     "i18next": "^11.10.1",
     "is-url-external": "^1.0.3",
     "leaflet": "^0.7.7",
@@ -70,6 +71,7 @@
     "@storybook/addon-links": "^3.3.3",
     "@storybook/addons": "^3.3.3",
     "@storybook/react": "^3.2.17",
+    "@types/debounce-promise": "^3.1.1",
     "@types/papaparse": "^4.5.7",
     "@types/react": "^16.8.17",
     "@types/react-autosuggest": "^9.3.9",
