- added enableMultiTenants switch support to gateway & minions - move enableMultiTenants to global - remove unused `tenantId` arg from minion - disabled tenant-db & tenant-api when enableMultiTenants == false

--- a/deploy/helm/magda-dev.yml
+++ b/deploy/helm/magda-dev.yml
@@ -8,6 +8,7 @@ global:
     maxUnavailable: 1
   enablePriorityClass: true
   defaultContactEmail: "magda-test@googlegroups.com"
+  enableMultiTenants: false
 
 tags:
   all: true
