--- a/deploy/helm/preview.yml
+++ b/deploy/helm/preview.yml
@@ -7,6 +7,7 @@ global:
   exposeNodePorts: false
   enablePriorityClass: false
   defaultContactEmail: "magda-test@googlegroups.com"
+  enableMultiTenants: false
 
 tags:
   all: true
