--- a/deploy/helm/magda/charts/minion-broken-link/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/minion-broken-link/templates/deployment.yaml
@@ -34,9 +34,9 @@ spec:
           value: "http://registry-api/v0"
         - name: ENABLE_MULTI_TENANTS
 {{- if .Values.global.enableMultiTenants }}
-          value: true
+          value: "true"
 {{- else }}
-          value: false
+          value: "false"
 {{- end }}
         - name: TENANT_URL
           value: "http://tenant-api/v0"
