Added custodianOrgLevel to web-server config

--- a/deploy/helm/magda/charts/web-server/templates/configmap.yaml
+++ b/deploy/helm/magda/charts/web-server/templates/configmap.yaml
@@ -13,8 +13,9 @@ data:
     "featureFlags": {{ toJson .Values.featureFlags | quote }},
     "vocabularyApiEndpoints": {{ toJson .Values.vocabularyApiEndpoints | quote }},
     {{- if .Values.global.defaultContactEmail }}
-    "defaultContactEmail": {{ toJson .Values.global.defaultContactEmail }}
+    "defaultContactEmail": {{ toJson .Values.global.defaultContactEmail }},
     {{- else }}
-    "defaultContactEmail": {{ toJson .Values.defaultContactEmail }}
+    "defaultContactEmail": {{ toJson .Values.defaultContactEmail }},
     {{- end }}
+    "custodianOrgLevel": {{ toJson .Values.custodianOrgLevel | quote }}
   }'
