--- a/deploy/helm/magda/charts/web-server/values.yaml
+++ b/deploy/helm/magda/charts/web-server/values.yaml
@@ -20,3 +20,4 @@ contentApiBaseUrlInternal: "http://content-api/v0/"
 featureFlags: {}
 vocabularyApiEndpoints: []
 defaultContactEmail: "mail@example.com"
+custodianOrgLevel: 2
