Refactored and revised README.md.

--- a/magda-registry-api/src/main/resources/application.conf
+++ b/magda-registry-api/src/main/resources/application.conf
@@ -78,5 +78,5 @@ authApi {
 
 opa {
     baseUrl = "http://localhost:6104/v0/opa"
-    basePolicyId = "object.registry.record.owner_orgunit"
+    recordPolicyId = "object.registry.record.owner_orgunit"
 }
