Push to GCR in prod.

--- a/magda-apidocs-server/package.json
+++ b/magda-apidocs-server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "generate-api-documentation --config ./apidoc.json --output ./build",
     "docker-build-local": "create-docker-context-for-node-component --build --push --tag auto --local",
-    "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto",
+    "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto --repository asia.gcr.io/terriajs-automated-deployment",
     "retag-and-push": "retag-and-push"
   },
   "devDependencies": {
