--- a/magda-elastic-search/package.json
+++ b/magda-elastic-search/package.json
@@ -6,7 +6,7 @@
     "dev": "docker-compose up",
     "dev-stop": "docker-compose down",
     "docker-build-local": "create-docker-context-for-node-component --build --push --tag auto --local",
-    "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto",
+    "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto --repository asia.gcr.io/terriajs-automated-deployment",
     "retag-and-push": "retag-and-push",
     "create-region-file": "create-region-synonym-file"
   },
