--- a/magda-migrator-registry-db/package.json
+++ b/magda-migrator-registry-db/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "echo \"No dev mode available, use helm instead.\"",
     "docker-build-local": "create-docker-context-for-node-component --build --push --tag auto --local",
-    "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto",
+    "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto --repository asia.gcr.io/terriajs-automated-deployment",
     "retag-and-push": "retag-and-push"
   },
   "author": "",
