--- a/magda-indexer/package.json
+++ b/magda-indexer/package.json
@@ -7,7 +7,7 @@
     "test": "cd .. && sbt indexer/test",
     "compile": "cd .. && sbt indexer/compile",
     "docker-build-local": "cd .. && sbt \"-Drepository=localhost:5000\" indexer/dockerBuildAndPush",
-    "docker-build-prod": "cd .. && sbt indexer/dockerBuildAndPush",
+    "docker-build-prod": "cd .. && sbt \"-Drepository=asia.gcr.io/terriajs-automated-deployment\" indexer/dockerBuildAndPush",
     "retag-and-push": "retag-and-push",
     "start": "cd .. && sbt indexer/run",
     "dev": "cd .. && sbt ~indexer/relaunch"
